@@ -77,6 +77,7 @@ version <next>
 - DNxHD decoder
 - Gamecube movie (.THP) playback system
 - Blackfin optimizations
+- Interplay C93 demuxer and video decoder
 
 version 0.4.9-pre1:
 
